--- a/public/admin/assets/css/style.bundle.css
+++ b/public/admin/assets/css/style.bundle.css
@@ -53048,7 +53048,7 @@ code:not([class*="language-"]) {
     height: 36px;
     bottom: 40px;
     right: 20px;
-    background-color: #3e5fae;
+    background-color: #fe1c1b;
     box-shadow: 0 0.5rem 1.5rem 0.5rem rgba(0, 0, 0, 0.075);
     opacity: 0;
     transition: color 0.2s ease, background-color 0.2s ease;
