--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -5,7 +5,6 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: "Inter", sans-serif;
 }
 
 .content {
@@ -362,6 +361,25 @@ th[rowspan] {
     /* Atau tampilkan sesuai kebutuhan */
 }
 
+.content-subdeskripsi {
+    padding: 0 100px;
+    text-align: justify
+}
+
+.content-benefit {
+    padding: 0 100px;
+}
+
+.content-eventdetail {
+    padding: 0 100px;
+    text-align: justify
+}
+
+.video-detail {
+    width: 550px;
+    height: 400px;
+}
+
 @media (max-width: 600px) {
     .phone-login {
         display: none !important;
@@ -384,6 +402,40 @@ th[rowspan] {
         padding-left: 30px;
         padding-right: 30px;
     }
+
+    .content-deskripsi {
+        margin-top: 445px !important;
+    }
+
+    .content-subdeskripsi {
+        padding: 0;
+        text-align: justify;
+    }
+
+    .content-benefit {
+        padding: 0;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .content-eventschedule img {
+        display: none;
+    }
+
+    .content-eventdetail {
+        padding: 0;
+        text-align: justify;
+    }
+
+    .content-deskripsi-pamflet {
+        margin-top: 785px !important;
+    }
+
+    .video-detail {
+        width: 250px;
+        height: 200px;
+    }
+
 }
 
 .select2-results__options {
